添加一些文件
Change-Id: I843ecd71ba179f2f10cbfda59a748ae4651b3e66

--- a/machine_learning/numpy.ipynb
+++ b/machine_learning/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,15 +18,19 @@
       "[ 1.5488135  1.4236548]\n",
       "[[ 1.5488135   3.26400287  4.86676625]\n",
       " [ 1.54488318  2.96853798  4.6144321 ]]\n",
-      "ufunc\n",
-      "[[ 1.24451336  1.30965238  1.26600291]\n",
-      " [ 1.2429333   1.19317006  1.28292405]]\n",
-      "[[ 2.09762701  2.43037873  2.20552675]\n",
-      " [ 2.08976637  1.8473096   2.29178823]]\n",
-      "[[ 2.09762701  2.43037873  2.20552675]\n",
-      " [ 2.08976637  1.8473096   2.29178823]]\n",
-      "[[ 4.70588336  5.55772786  4.96673844]\n",
-      " [ 4.68742402  4.15226845  5.18564439]]\n"
+      "[[ 7.90954827  7.47255231]\n",
+      " [ 7.47255231  7.12242447]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-628eb9fbee62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# 矩阵乘法，内积\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m  \u001b[0;31m# 外积\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# ufunc = universal functions, operate elementwide on a ndarray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (3,2) "
      ]
     }
    ],
@@ -41,6 +45,11 @@
     "print a1.reshape((3,2)).sum(axis=1)\n",
     "print a1.min(axis=1)\n",
     "print a1.cumsum(axis=1) # cumulative sum\n",
+    "\n",
+    "# a1.dot(a1.T)  # 矩阵乘法，内积\n",
+    "# a1 * a1.T  # 外积\n",
+    "# np.linalg.norm( a1 )  # 范数\n",
+    "# axis=0 按列处理； axis=1 按行处理；\n",
     "\n",
     "# ufunc = universal functions, operate elementwide on a ndarray\n",
     "print 'ufunc'\n",
